Fri Jun 11 03:17:51 1999  Jeffrey A Law  (law@cygnus.com)

	* Makefile.in (libgcc2): Pass MAYBE_USE_COLLECT2 as an argument.
	* libgcc2.c (__CTOR_LIST, __DTOR_LIST); Do not provide
	initializers is some circumstances.

	* fixinc/inclhack.def (endif_label): Add additional selector for
	more bogus stuff after #endif statements.
	* fixinc/inclhack.sh, fixinc/fixincl.x: Rebuilt.

Thu Jun 10 20:45:27 1999  Mumit Khan  <khan@xraylith.wisc.edu>

	* i386/cygwin.h (SET_ASM_OP): Define.

Thu Jun 10 20:37:57 1999  Mumit Khan  <khan@xraylith.wisc.edu>

	* reg-stack.c (stack_reg_life_analysis): Find all the RETURN insns.

Thu Jun 10 14:47:59 1999  Bruce Korb <ddsinc09@ix.netcom.com>

        * fixinc/inclhack.def(sun_auth_proto): We do not know how to
        test for the presence of valid prototypes.  Delete bypass expr.
        (ioctl_fix_ctrl): Correct the selection expression.

	* fixinc/inclhack.def(no_double_slash): fixed quoting rules
	* fixinc/inclhack.sh: regen
	* fixinc/fixincl.x: regen

Thu Jun 10 01:22:59 1999  Jeffrey A Law  (law@cygnus.com)

	* loop.c (strength_reduce): Disable biv->giv translations and
	giv recombination.  For the release branch only.

Wed Jun  9 15:57:57 1999  Franz Sirl  <Franz.Sirl-kernel@lauterbach.com>

	* rs6000.md (movsi_got_internal_mem): Delete.
	* rs6000.h (CONDITIONAL_REGISTER_USAGE): Mark PIC_OFFSET_TABLE_REGNUM.
	(GOT_TOC_REGNUM): Delete.
	(PIC_OFFSET_TABLE_REGNUM): Define.
	(FINALIZE_PIC): Disable.
	* rs6000.c (rs6000_got_register): New code for fixed pic register.
	(rs6000_replace_regno): Delete.
	(rs6000_finalize_pic): Likewise.
	(output_prolog): Handle PIC_OFFSET_TABLE_REGNUM.

Wed Jun  9 19:44:26 1999  J"orn Rennecke <amylaar@cygnus.co.uk>

	* loop.c (loop_insn_first_p): Don't compare LUIDs when P
	is a note; use <= for the compare; advance P while it is
	a NOTE.

Wed Jun  9 13:12:24 1999  Jeffrey A Law  (law@cygnus.com)

	* fixinc/inclhack.def (no_double_slash): Fix quoting for test.